--- a/prebuilts/camera_resolutions.cfg
+++ b/prebuilts/camera_resolutions.cfg
@@ -10,6 +10,7 @@
 0,preview,960x720
 0,preview,1280x720
 0,preview,1280x960
+0,preview,1920x1080
 0,preview,1920x1088
 0,picture,320x240
 0,picture,480x320
@@ -44,6 +45,7 @@
 1,picture,1280x720
 1,picture,1280x960
 1,picture,1920x1080
+1,picture,1920x1088
 1,picture,1952x1952
 1,picture,2448x2448
 1,picture,2592x1456
