--- a/rootdir/etc/init.hi6210sft.power.rc
+++ b/rootdir/etc/init.hi6210sft.power.rc
@@ -1,6 +1,6 @@
 on early-init
     write /sys/block/mmcblk0/queue/nr_requests 256
-    write /sys/block/mmcblk0/queue/scheduler noop
+    write /sys/block/mmcblk0/queue/scheduler cfq
     write /sys/block/mmcblk0/bdi/read_ahead_kb 1024
 
 on charger
