--- a/rootdir/etc/init.hi6210sft.rc
+++ b/rootdir/etc/init.hi6210sft.rc
@@ -662,6 +662,9 @@ on boot
     chown system system /sys/touchscreen/response
     chown system system /sys/touchscreen/status
 
+    chmod 0777 /sys/power/wake_lock
+    chmod 0777 /sys/power/wake_unlock
+
     write /proc/sys/kernel/hung_task_panic 1
     write /proc/sys/kernel/hung_task_timeout_secs 120
     write /sys/kernel/hungtask/monitorlist "whitelist,system_server,surfaceflinger"
