--- a/rootdir/etc/init.hi6210sft.rc
+++ b/rootdir/etc/init.hi6210sft.rc
@@ -422,6 +422,8 @@ on boot
     chmod 0444 /sys/bus/i2c/devices/0-0028/rd_nfc_sim_status
     chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_enable_status
     chmod 0664 /sys/bus/i2c/devices/0-0028/nfc_enable_status
+    chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_card_num
+    chmod 0444 /sys/bus/i2c/devices/0-0028/nfc_card_num
     chown nfc nfc /sys/bus/i2c/devices/0-0028/nfc_chip_type
     chmod 0444 /sys/bus/i2c/devices/0-0028/nfc_chip_type
     chown system system /sys/bus/i2c/devices/0-0028/nfc_fw_version
